Update some stored procedures and fix some endpoints

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Create a .env
         run: |
-          cat <<EOF > .env
+          cat <<EOF > /api/.env
           NODE_ENV=development
           PORT=3000
           CORS_ORIGIN=*
